<resources>
    <string name="app_name">Бонусна карта кав\'ярні</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="num_code">+380</string>
    <string name="num">Номер телефону</string>
    <string name="password">Пароль</string>
    <string name="enter">Увійти</string>
    <string name="reg">Зареєструватися</string>
    <string name="menu">Меню</string>
    <string name="name">Ім\'я</string>
    <string name="mail">Пошта</string>
    <string name="confirm">Підтвердження пароля</string>
    <string name="t_bill">Ваш чек за номером: 3</string>
    <string name="t_tv">Загальна сума: 100 грн</string>
    <string name="t_back">Повернутися до меню</string>
    <string name="t_tnx">Дякуємо за замовлення!\nДля оплати підійдіть до каси</string>
    <string name="qty">Кількість</string>
    <string name="add">Додати</string>
    <string name="i_name">Американо</string>
    <string name="i_price">16</string>
    <string name="i_photo">Фотографія товару</string>
    <string name="i_add_photo">Додати</string>
    <string name="tView">Кава</string>
</resources>