<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="#725b53"
    android:orientation="horizontal"
    android:padding="15dp">

    <ImageView
        android:id="@+id/item_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/i_photo"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/i_name"
            android:textAllCaps="true"
            android:textColor="#fafafa"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/i_price"
            android:textColor="#c7c7c7"
            android:textSize="24sp" />


        <ImageView
            android:id="@+id/item_add_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/i_add_photo"
            android:src="@drawable/ic_add" />


    </LinearLayout>

</LinearLayout>