<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a1887f"
    tools:context=".TotalAct">

    <TextView
        android:id="@+id/total_tnx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/t_tnx"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/total_l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/total_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#725b53"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/total_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_tv"
            android:textAlignment="center"
            android:textColor="#fafafa"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/total_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_bill"
            android:textAllCaps="true"
            android:textColor="#fafafa"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/t_back"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_l" />

</androidx.constraintlayout.widget.ConstraintLayout>